Render Long Tweet Error in Vanilla JS

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/dcash/.local/share/virtualenvs/twitter-clone-PP8DVHOJ/bin/python"
+    "python.pythonPath": "C:\\Users\\djc010917\\Anaconda3\\python.exe"
 }
